--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="images" href="Images/image1.png">
     <link rel="images" href="Images/image 2.png">
-</head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+  </head>
 <body>
   
   <ul>
