--- a/assets/index.html
+++ b/assets/index.html
@@ -34,7 +34,7 @@
 
 <div class="margin">
     <div class="image">
-      <div><img src="/assets/Images/image1.png" alt="a girl learning" style="float: right; width: 300px;height:206px;"></div>
+      <div><img src="/assets/Images/image1.png" alt="a girl learning" style="float: right; width: 300px;height:206px;cursor:zoom-out;"></div>
       <section><div class="content">
         <h3>Moringa</h3>
         <h2>Nurturing Africa's Tech Talent</h2>
@@ -50,9 +50,10 @@
 
 
 <div class="margin">
-  <p style="font-size: xx-small;"><strong style="background-color: gray;overflow: visible;font-size: large;background: opacity 0.5em;">Stori</strong><strong style="font-size: large;opacity: 0.5em;">es</strong> so many memories</p>
+  <p style="font-size: xx-small;"><strong style="background-color: gray;overflow: visible;font-size: large;background: opacity 0.5em;">Stori</strong><strong style="font-size: large;opacity: 0.5em;">es</strong> so many memories</p></div>
   <div class="image">
-  <img src="/assets/Images/image 2.png" alt="orientation day" style="float:left;width: 300px;height:206px;"></div>
+  <img src="/assets/Images/image 2.png" alt="orientation day" style="float:left;width: 300px;height:206px;cursor: zoom-in;">
+<div class="bottom-left">@23 September.2021.</div>
 
   <div class="content">
    <h3>Orientation Day</h3>
@@ -60,13 +61,14 @@
   </div>
   <div>
    <button style="background-color: #EC4067;">See Album</button></div>
-
+  </div>
 </div>
 
+</div>
 </div>
 <div class="margin">
 <div class="image">
-  <img src="/assets/Images/image 3.png" alt="board meeting" style="float:right;width: 300px;height:206px;"></div>
+  <img src="/assets/Images/image 3.png" alt="board meeting" style="float:right;width: 300px;height:206px;cursor:alias"><div class="top-left" style="position: relative;top: 1px;left: 245px;color: white;">#1</div>
 
 <section><div class="content">
   <h3>Board Meeting</h3>
@@ -82,7 +84,7 @@
 
   <div class="image">
     <img src="/assets/Images/image 4.png" alt="graduation party" style="float:left;width: 300px;height:206px;">
-   </div>
+    <div class="bottom-left2">@10 June.2022</div>
 <div class="content">
   <h3>Graduation Party</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,Nam est purus,consectetur sit frin bot.</p></div>
@@ -120,7 +122,7 @@
     </div>
     
     <div class="column">
-    <p2><img src="/assets/Images/image 8.png" alt="Christine Karimi" style="width:40%;height: 100px;"><br><span style="color: #EC4067;">Web Development</span><br>
+    <p2><img src="/assets/Images/image 8.png" alt="Christine Karimi" style="width:40%;height: 100px; "><br><span style="color: #EC4067;">Web Development</span><br>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
     <div><button>Ask A Question</button></div>
