--- a/assets/index.html
+++ b/assets/index.html
@@ -68,7 +68,7 @@
 </div>
 <div class="margin">
 <div class="image">
-  <img src="/assets/Images/image 3.png" alt="board meeting" style="float:right;width: 300px;height:206px;cursor:alias"><div class="top-left" style="position: relative;top: 1px;left: 245px;color: white;">#1</div>
+  <img src="/assets/Images/image 3.png" alt="board meeting" style="float:right;width: 300px;height:206px;cursor:alias"></div>
 
 <section><div class="content">
   <h3>Board Meeting</h3>
@@ -84,7 +84,7 @@
 
   <div class="image">
     <img src="/assets/Images/image 4.png" alt="graduation party" style="float:left;width: 300px;height:206px;">
-    <div class="bottom-left2">@10 June.2022</div>
+    </div>
 <div class="content">
   <h3>Graduation Party</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,Nam est purus,consectetur sit frin bot.</p></div>
