--- a/assets/index.html
+++ b/assets/index.html
@@ -69,7 +69,7 @@
 </div>
 <div class="margin">
 <div class="image">
-  <img src="/assets/Images/image 3.png" alt="board meeting" style="float:right;width: 300px;height:206px;cursor:alias"></div>
+  <img src="/assets/Images/image 3.png" alt="board meeting" style="float:right;width: 300px;height:206px;cursor:alias"><div class="bottom-right" style="position: absolute;top: 137%;right: 20px;color: white;font-size: x-small;">@31 October.2021.</div></div>
 
 <section>
   <h3>Board Meeting</h3>
@@ -84,7 +84,8 @@
 <div class="margin">
 
   <div class="image">
-    <img src="/assets/Images/image 4.png" alt="graduation party" style="float:left;width: 300px;height:206px;">
+    <img src="/assets/Images/image 4.png" alt="graduation party" style="float:left;width: 300px;height:206px;"><div class="bottom-left" style="position: absolute;top: 167%;left: 20px;color: white;font-size: x-small;">@10 June.2022.</div>
+
     </div>
 
   <h3>Graduation Party</h3>
