i tried to the best i could

--- a/assets/index.html
+++ b/assets/index.html
@@ -16,6 +16,7 @@
 <body>
   <div class="imargin" style="margin: 10px;">
     <div class="nav_bar">
+      <div class="logo">
 
   <ul>
     <li><button style="background-color: #EC4067;">Enroll</button></li>
@@ -103,28 +104,33 @@
       <div class="Mentors" style="column-count: 4;column-gap: 10px;">
     
         <div class="column">
-    <img src="/assets/Images/image 5.png" alt="Rose Oketch" style="width: 40%;height: 100px;padding-top: 2px;"><br><span style="color: #EC4067;">Web Development</span><br>
+    <img src="/assets/Images/image 5.png" alt="Rose Oketch" style="width: 40%;height: 100px;padding-top: 2px;"><p class="mentor-name" style="color: white;top: 195%;right: 1110px;position: absolute;font-size: small;">Rose Oketch</p>
+    <br><span style="color: #EC4067;">Web Development</span><br>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
     <div style="margin: 10px;"><button>Ask A Question</button></div>
         </div>
 
     <div class="column">
-    <p2><img src="/assets/Images/image 6.png" alt="Albert Byrone" style="width:40%;height: 100px;"><br><span style="color: #EC4067;">Web Development</span><br>
+    <p2><img src="/assets/Images/image 6.png" alt="Albert Byrone" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 195%;right: 790px;position: absolute;font-size: small;">Albert Byrone</p>
+      <br><span style="color: #EC4067;">Web Development</span><br>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
   <div style="margin: 10px;"><button>Ask A Question</button></div>
     </div>
   
     <div class="column">
-  <div><p2><img  src="/assets/Images/image 7.png" alt="Raphael Katana" style="width:40%;height: 100px;"><br><span style="color: #EC4067;">Web Development</span><br>
+  <div><p2><img  src="/assets/Images/image 7.png" alt="Raphael Katana" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 195%;right: 490px;position: absolute;font-size: small;">Raphael Katana</p>
+    <br><span style="color: #EC4067;">Web Development</span><br>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
   </div>
    <div style="margin: 10px;"><button>Ask A Question</button></div>
     </div>
     
     <div class="column">
-    <p2><img src="/assets/Images/image 8.png" alt="Christine Karimi" style="width:40%;height: 100px; "><br><span style="color: #EC4067;">Web Development</span><br>
+    <img src="/assets/Images/image 8.png" alt="Christine Karimi" style="width:40%;height: 100px; "><p class="mentor-name" style="color: white;top: 197%;right: 180px;position: absolute;font-size: small;">Christine Karimi</p>
+    </div>
+      <p><br><span style="color: #EC4067;">Web Development</span><br>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
     <div style="margin: 10px;"><button>Ask A Question</button></div>
@@ -144,7 +150,7 @@
 
     <div>
       <h2>Still not sure?</h2> 
-      <p>Go ahead and <button>Enroll</button> or <a href="#">contact us.</a></p>
+      <p>Go ahead and <button>Enroll</button> or <a href="#" style="color: #EC4067;">contact us.</a></p>
     </div>
 
     <footer>Designed with <img src="Images/like.png" alt="love" style="width: 10px;"> by J&R</footer>
