--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Moringa School Website</title>
 
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="images" href="Images/image1.png">
-    <link rel="images" href="Images/image 2.png">
+    <!-- <link rel="images" href="Images/image1.png">
+    <link rel="images" href="Images/image 2.png"> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
 
 <div class="margin" style="margin: 10px;">
     <div class="image">
-      <div><img src="Images/image1.png" alt="a girl learning" style="float: right; width: 300px;height:206px;cursor:zoom-out;"></div>
+      <div><img src="./assets/Images/image1.png" alt="a girl learning" style="float: right; width: 300px;height:206px;cursor:zoom-out;"></div>
       <section><div class="content">
         <h3>Moringa</h3>
         <h2>Nurturing Africa's Tech Talent</h2>
@@ -54,7 +54,7 @@
 <div class="margin" style="margin: 5px;">
   <p style="font-size: xx-small;"><strong style="background-color: gray;overflow: visible;font-size: large;background: opacity 0.5em;">Stori</strong><strong style="font-size: large;opacity: 0.5em;">es</strong> so many memories</p></div>
   <div class="image">
-  <img src="Images/image 2.png" alt="orientation day" style="float:left;width: 300px;height:206px;cursor: zoom-in;">
+  <img src="./assets/Images/image 2.png" alt="orientation day" style="float:left;width: 300px;height:206px;cursor: zoom-in;">
 <div class="bottom-left">@23 September.2021.</div>
    
   
@@ -70,7 +70,7 @@
 </div>
 <div class="margin">
 <div class="image">
-  <img src="Images/image 3.png" alt="board meeting" style="float:right;width: 300px;height:206px;cursor:alias"><div class="bottom-right" style="position: absolute;top: 137%;right: 20px;color: white;font-size: x-small;">@31 October.2021.</div></div>
+  <img src="./assets/Images/image 3.png" alt="board meeting" style="float:right;width: 300px;height:206px;cursor:alias"><div class="bottom-right" style="position: absolute;top: 137%;right: 20px;color: white;font-size: x-small;">@31 October.2021.</div></div>
 
 <section>
   <h3>Board Meeting</h3>
@@ -85,7 +85,7 @@
 <div class="margin">
 
   <div class="image">
-    <img src="Images/image 4.png" alt="graduation party" style="float:left;width: 300px;height:206px;"><div class="bottom-left" style="position: absolute;top: 167%;left: 20px;color: white;font-size: x-small;">@10 June.2022.</div>
+    <img src="./assets/Images/image 4.png" alt="graduation party" style="float:left;width: 300px;height:206px;"><div class="bottom-left" style="position: absolute;top: 167%;left: 20px;color: white;font-size: x-small;">@10 June.2022.</div>
 
     </div>
 
@@ -104,7 +104,7 @@
       <div class="Mentors" style="column-count: 4;column-gap: 10px;">
     
         <div class="column">
-    <img src="Images/image 5.png" alt="Rose Oketch" style="width: 40%;height: 100px;padding-top: 2px;"><p class="mentor-name" style="color: white;top: 195%;right: 1110px;position: absolute;font-size: small;">Rose Oketch</p>
+    <img src="./assets/Images/image 5.png" alt="Rose Oketch" style="width: 40%;height: 100px;padding-top: 2px;"><p class="mentor-name" style="color: white;top: 195%;right: 1110px;position: absolute;font-size: small;">Rose Oketch</p>
     <br><span style="color: #EC4067;">Web Development</span><br>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
@@ -112,7 +112,7 @@
         </div>
 
     <div class="column">
-    <p2><img src="Images/image 6.png" alt="Albert Byrone" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 195%;right: 790px;position: absolute;font-size: small;">Albert Byrone</p>
+    <p2><img src="./assets/Images/image 6.png" alt="Albert Byrone" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 195%;right: 790px;position: absolute;font-size: small;">Albert Byrone</p>
       <br><span style="color: #EC4067;">Web Development</span><br>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
@@ -120,7 +120,7 @@
     </div>
   
     <div class="column">
-  <div><p2><img  src="Images/image 7.png" alt="Raphael Katana" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 195%;right: 490px;position: absolute;font-size: small;">Raphael Katana</p>
+  <div><p2><img  src="./assets/Images/image 7.png" alt="Raphael Katana" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 195%;right: 490px;position: absolute;font-size: small;">Raphael Katana</p>
     <br><span style="color: #EC4067;">Web Development</span><br>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
   </div>
@@ -128,7 +128,7 @@
     </div>
     
     <div class="column">
-    <img src="Images/image 8.png" alt="Christine Karimi" style="width:40%;height: 100px; "><p class="mentor-name" style="color: white;top: 197%;right: 180px;position: absolute;font-size: small;">Christine Karimi</p>
+    <img src="./assets/Images/image 8.png" alt="Christine Karimi" style="width:40%;height: 100px; "><p class="mentor-name" style="color: white;top: 197%;right: 180px;position: absolute;font-size: small;">Christine Karimi</p>
     </div>
       <p><br><span style="color: #EC4067;">Web Development</span><br>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
@@ -142,7 +142,7 @@
       <br style="margin: 80px;margin-bottom: 80px; padding-bottom: 60px;">
    <div><p style="font-size: xx-small;"><strong style="font-size: large;background-color: gray;background: opacity 0.5em;opacity: 0.5em;color: lightblack;">Proje</strong><strong style="opacity: 0.5em;font-size: large;color: lightblack;">ct</strong>        It's hopefully a good one</p></div>
 
-    <p><div><img class="bikes" src="Images/image 9.png" alt="Bikes for hire" style="float: right;width:401px;height:211px">
+    <p><div><img class="bikes" src="./assets/Images/image 9.png" alt="Bikes for hire" style="float: right;width:401px;height:211px">
      This is our</p>
       <h2>Cool Bike Website</h2>
      <p>An application that allows users to showcase bikes for sale and hire whenever they are having team building and any hiking activities.</p>
