--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="stories">
           <p style="margin-bottom: 10px;"><strong style="font-size: large;">Stories</strong> <span style="font-size: smaller;">So many memories!</span></p>
           <div class="img-2">
-              <img src="./assets/images/image 2.png" alt="Orientation day">
+              <img src="./assets/Images/image 2.png" alt="Orientation day">
           </div>
           <h3 id="day">Orientation Day</h3>
             <p id="orientation">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus commodo augue mauris, vitae tincidunt lorem ultrices et. Duis a egestas massa. Aliquam condimentum ullamcorper diam, vitae imperdiet nisl laoreet a.</p>
