--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p id="board" style="margin-block-end: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus commodo augue mauris, vitae tincidunt lorem ultrices et. Duis a egestas massa. Aliquam condimentum ullamcorper diam, vitae imperdiet nisl laoreet a.</p>
           
           <button id="read">Read out stories</button>
-          <div class="img-3" style="padding-left: 30px;"><img src="./assets/images/image 3.png" alt="Board Meeting"></div>
+          <div class="img-3" style="padding-left: 30px;"><img src="./assets/Images/image 3.png" alt="Board Meeting"></div>
 
        </div>
  
