--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <!--section four of the intro-->
   <div class="graduation">
       <div class="img-4">
-          <img src="./assets/images/image 4.png" alt="Graduation Day">
+          <img src="./assets/Images/image 4.png" alt="Graduation Day">
       </div>
       <h3>Graduation Day</h3>
      <p id="graduate">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus commodo augue mauris, vitae tincidunt lorem ultrices et. Duis a egestas massa. Aliquam condimentum ullamcorper diam, vitae imperdiet nisl laoreet a.</p>
@@ -90,7 +90,7 @@
     <div class="Mentors" style="column-count: 4;column-gap: 10px;">
   
       <div class="column">
-  <img src="./assets/Images/image 5.png" alt="Rose Oketch" style="width: 40%;height: 100px;padding-top: 2px;"><p class="mentor-name" style="color: white;top: 195%;right: 1110px;position: absolute;font-size: small;">Rose Oketch</p>
+  <img src="./assets/Images/image 5.png" alt="Rose Oketch" style="width: 40%;height: 100px;padding-top: 2px;"><p class="mentor-name" style="color: white;top: 268%;right: 1110px;position: absolute;font-size: small;">Rose Oketch</p>
   <br><span style="color: #EC4067;">Web Development</span><br>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
@@ -98,7 +98,7 @@
       </div>
 
   <div class="column">
-  <p2><img src="./assets/Images/image 6.png" alt="Albert Byrone" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 195%;right: 790px;position: absolute;font-size: small;">Albert Byrone</p>
+  <p2><img src="./assets/Images/image 6.png" alt="Albert Byrone" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 268%;right: 790px;position: absolute;font-size: small;">Albert Byrone</p>
     <br><span style="color: #EC4067;">Web Development</span><br>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
@@ -106,7 +106,7 @@
   </div>
 
   <div class="column">
-<div><p2><img  src="./assets/Images/image 7.png" alt="Raphael Katana" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 195%;right: 490px;position: absolute;font-size: small;">Raphael Katana</p>
+<div><p2><img  src="./assets/Images/image 7.png" alt="Raphael Katana" style="width:40%;height: 100px;"><p class="mentor-name" style="color: white;top: 268%;right: 490px;position: absolute;font-size: small;">Raphael Katana</p>
   <br><span style="color: #EC4067;">Web Development</span><br>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 </div>
@@ -114,7 +114,7 @@
   </div>
   
   <div class="column">
-  <img src="./assets/Images/image 8.png" alt="Christine Karimi" style="width:40%;height: 100px; "><p class="mentor-name" style="color: white;top: 197%;right: 180px;position: absolute;font-size: small;">Christine Karimi</p>
+  <img src="./assets/Images/image 8.png" alt="Christine Karimi" style="width:40%;height: 100px; "><p class="mentor-name" style="color: white;top: 268%;right: 180px;position: absolute;font-size: small;">Christine Karimi</p>
   </div>
     <p><br><span style="color: #EC4067;">Web Development</span><br>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
@@ -139,7 +139,7 @@
     <p>Go ahead and <button>Enroll</button> or <a href="#" style="color: #EC4067;">contact us.</a></p>
   </div>
 
-  <footer>Designed with <img src="Images/like.png" alt="love" style="width: 10px;"> by J&R</footer>
+  <footer>Designed with <img src="./assets/Images/like.png" alt="love" style="width: 10px;"> by J&R</footer>
   </div>
       
    </body>
