--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="navbar">
       <div class="logo">
           <!--this is for the logo,you can place an image or the name etc.-->
-          <h2>Moringa School</h2>
+          <h2><span style="color: black;">Moringa</span> School</h2>
       </div>
       <nav>
           <ul id="MenuItems">
@@ -48,7 +48,7 @@
   </div>
       <!--section two of the intro-->
       <div class="stories">
-          <p style="margin-bottom: 10px;"><strong style="font-size: large;">Stories</strong> <span style="font-size: smaller;">So many memories!</span></p>
+          <p style="margin-bottom: 10px;"><strong style="font-size: large;"><span style="background-color: lightgray;">Stor</span>ies</strong> <span style="font-size: smaller;">So many memories!</span></p>
           <div class="img-2">
               <img src="./assets/Images/image 2.png" alt="Orientation day">
           </div>
@@ -86,7 +86,7 @@
     
       <div class="row">
         
-<p style="font-size: x-small;"><strong style="background-color: gray;background-blend-mode: color;font-size: large;margin-bottom: 1px;padding-bottom: 2px;background: opacity 0.5em; opacity: 0.5em;color: lightblack;">Tech</strong><strong style="opacity: 0.5em;font-size: large;color: lightblack;">nical Mentors</strong> Skilled and kind</p>
+<p style="font-size: x-small;"><strong style="background-color:lightgray;background-blend-mode: color;font-size: large;margin-bottom: 1px;padding-bottom: 2px;background: opacity 0.5em; opacity: 0.5em;color: lightblack;">Tech</strong><strong style="opacity: 0.5em;font-size: large;color: lightblack;">nical Mentors</strong> Skilled and kind</p>
     <div class="Mentors" style="column-count: 4;column-gap: 10px;">
   
       <div class="column">
@@ -94,7 +94,7 @@
   <br><span style="color: #EC4067;">Web Development</span><br>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
-  <div style="margin: 10px;"><button>Ask A Question</button></div>
+  <div style="margin: 10px;"><button style="cursor: pointer;background-color: #EC4067;color: white;border: none;border-radius: 10px;height: 40px;">Ask A Question</button></div>
       </div>
 
   <div class="column">
@@ -102,7 +102,7 @@
     <br><span style="color: #EC4067;">Web Development</span><br>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
-<div style="margin: 10px;"><button>Ask A Question</button></div>
+<div style="margin: 10px;"><button style="cursor: pointer;background-color: #EC4067;color: white;border: none;border-radius: 10px;height: 40px;">Ask A Question</button></div>
   </div>
 
   <div class="column">
@@ -110,7 +110,7 @@
   <br><span style="color: #EC4067;">Web Development</span><br>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 </div>
- <div style="margin: 10px;"><button>Ask A Question</button></div>
+ <div style="margin: 10px;"><button style="cursor: pointer;background-color: #EC4067;color: white;border: none;border-radius: 10px;height: 40px;">Ask A Question</button></div>
   </div>
   
   <div class="column">
@@ -119,24 +119,24 @@
     <p><br><span style="color: #EC4067;">Web Development</span><br>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p2>
 
-  <div style="margin: 10px;"><button>Ask A Question</button></div>
+  <div style="margin: 10px;"><button style="cursor: pointer;background-color: #EC4067;color: white;border: none;border-radius: 10px;height: 40px;">Ask A Question</button></div>
   </div>
    
 </div>
     </div>
 
     <br style="margin: 80px;margin-bottom: 80px; padding-bottom: 60px;">
- <div><p style="font-size: xx-small;"><strong style="font-size: large;background-color: gray;background: opacity 0.5em;opacity: 0.5em;color: lightblack;">Proje</strong><strong style="opacity: 0.5em;font-size: large;color: lightblack;">ct</strong>        It's hopefully a good one</p></div>
+ <div><p style="font-size: xx-small;"><strong style="font-size: large;background-color: lightgray;background: opacity 0.5em;opacity: 0.5em;color: lightblack;">Proje</strong><strong style="opacity: 0.5em;font-size: large;color: lightblack;">ct</strong>        It's hopefully a good one</p></div>
 
   <p><div><img class="bikes" src="./assets/Images/image 9.png" alt="Bikes for hire" style="float: right;width:401px;height:211px">
    This is our</p>
     <h2>Cool Bike Website</h2>
    <p>An application that allows users to showcase bikes for sale and hire whenever they are having team building and any hiking activities.</p>
-  <button>Learn More</button>
+  <button style="cursor: pointer;background-color: #EC4067;color: white;border: none;border-radius: 10px;height: 40px;">Learn More</button>
 
   <div>
     <h2>Still not sure?</h2> 
-    <p>Go ahead and <button>Enroll</button> or <a href="#" style="color: #EC4067;">contact us.</a></p>
+    <p>Go ahead and <button style="cursor: pointer;background-color: #EC4067;color: white;border: none;border-radius: 10px;height: 40px;">Enroll</button> or <a href="#" style="color: #EC4067;">contact us.</a></p>
   </div>
 
   <footer>Designed with <img src="./assets/Images/like.png" alt="love" style="width: 10px;"> by J&R</footer>
